--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.11"
 dependencies = [
     "fastapi[standard]>=0.117.1",
     "pydantic-settings>=2.10.1",
+    "google-generativeai>=0.8.0",
 ]
 
 [dependency-groups]
