--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -9,6 +9,7 @@ dependencies = [
     "pydantic-settings>=2.10.1",
     "google-generativeai>=0.8.0",
     "lxml>=6.0.2",
+    "requests>=2.31.0"
 ]
 
 [dependency-groups]
