--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -14,8 +14,10 @@ dependencies = [
 
 [dependency-groups]
 dev = [
+    "mypy>=1.18.2",
     "pytest>=8.4.2",
     "ruff>=0.13.1",
+    "types-requests>=2.32.4.20250913",
 ]
 
 [tool.ruff]
