Set extension url in built versions

--- a/.github/workflows/extension.yml
+++ b/.github/workflows/extension.yml
@@ -36,6 +36,8 @@ jobs:
     
     - name: Build extension
       working-directory: ./extension
+      env:
+        VITE_BACKEND_URL: ${{ secrets.HEROKU_APP_URL }}
       run: npm run build
 
   test-browsers:
@@ -58,10 +60,14 @@ jobs:
     
     - name: Build for Chrome
       working-directory: ./extension
+      env:
+        VITE_BACKEND_URL: ${{ secrets.HEROKU_APP_URL }}
       run: npm run build
     
     - name: Build for Firefox
       working-directory: ./extension
+      env:
+        VITE_BACKEND_URL: ${{ secrets.HEROKU_APP_URL }}
       run: npm run build:firefox
     
     - name: Create Chrome zip
