--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -7,15 +7,16 @@ requires-python = ">=3.11"
 dependencies = [
     "fastapi[standard]>=0.117.1",
     "pydantic-settings>=2.10.1",
-    "google-generativeai>=0.8.0",
     "lxml>=6.0.2",
-    "requests>=2.31.0"
+    "pandas>=2.3.3",
+    "google-genai>=1.45.0",
 ]
 
 [dependency-groups]
 dev = [
     "pytest>=8.4.2",
     "ruff>=0.13.1",
+    "requests>=2.31.0"
 ]
 
 [tool.ruff]
