--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -68,7 +68,7 @@ jobs:
   
   deploy:
     runs-on: ubuntu-22.04
-    # if: ${{ github.event_name == 'push' }}
+    if: ${{ github.event_name == 'push' }}
     needs: ['test', 'type-check']
     steps:
       - name: checkout
