--- a/extension/package.json
+++ b/extension/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "wxt-react-starter",
+  "name": "web-scraiper",
   "description": "manifest.json description",
   "private": true,
   "version": "0.0.0",
@@ -14,7 +14,9 @@
     "compile": "tsc --noEmit",
     "postinstall": "wxt prepare",
     "format": "prettier --write \"**/*.{ts,tsx,css}\"",
-    "format:check": "prettier --check \"**/*.{ts,tsx,css}\""
+    "format:check": "prettier --check \"**/*.{ts,tsx,css}\"",
+    "test": "vitest run",
+    "test:watch": "vitest"
   },
   "dependencies": {
     "react": "^19.1.1",
@@ -26,6 +28,7 @@
     "@wxt-dev/module-react": "^1.1.3",
     "prettier": "^3.6.2",
     "typescript": "^5.9.2",
+    "vitest": "^3.2.4",
     "wxt": "^0.20.6"
   }
 }
