--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -10,6 +10,7 @@ dependencies = [
     "lxml>=6.0.2",
     "pandas>=2.3.3",
     "google-genai>=1.45.0",
+    "lxml-html-clean>=0.4.3",
 ]
 
 [dependency-groups]
