--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,4 +1,4 @@
-FROM ghcr.io/astral-sh/uv:python3.11-alpine
+FROM ghcr.io/astral-sh/uv:python3.11-bookworm-slim
 
 WORKDIR /app
 
@@ -10,6 +10,7 @@ ENV DEBUG="False"
 COPY pyproject.toml uv.lock ./
 
 RUN uv sync --frozen --no-dev
+RUN uv run playwright install chromium
 
 COPY . .
 
